fixed the margin gap in the footer

--- a/src/App.css
+++ b/src/App.css
@@ -540,5 +540,6 @@ a:hover, a:visited{
 footer{
   position: fixed;
   bottom: 0;
+  margin-left: -8px;
   width: 100%;
 }
